# Ohtu_projekti

./: .coveragerc  .env  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  repository.datab.db  retro.md  robot_script.sh  tasks.py
.github/workflows/: main.yml
backend/: app.py  bibrepository.py  initialize_database.py  model.py
backend/bibtex/: output.bib
backend/controllers/: bib_controller.py
backend/migrations/versions/: 6670b3fae335_manual_migration.py  a077f1ca06c2_.py  b397b448f7a2_initial_migration.py  d5de40bbd765_first_migration.py  e0e22839d383_initial_migration.py
backend/models/: __init__.py  article.py  bib.py  book.py  entry.py  inproceedings.py  model.py.backup
backend/repositories/: bibrepository.py
backend/requests/: testi.rest
backend/services/: data_service.py
backend/tests/: AppLibrary.py  add.robot  citekey_gen.robot  download.robot  filter.robot  multipletypes.robot  remove.robot  resource.robot  sample.bib  show.robot  test_bib_controller.py  test_bibrepository.py  test_data_service.py  validation.robot
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/Ohtu_miniprojekti/: package.json
frontend/Ohtu_miniprojekti/src/: App.jsx
frontend/src/: App.jsx  main.jsx
frontend/src/Services/: Refservice.js  Validating.js
frontend/src/assets/: slider.css
frontend/src/components/: delete.jsx  download.jsx  footer.jsx  form.jsx  inputfield.jsx  (+5 more)
src/: main.py
src/UI/: run.py
src/logic/: actions.py
src/repository/: schema.sql  sql_commands.py  sql_connect.py
src/tests/: exists_test.py
(+5 files in other folders)
