[tool.poetry]
name = "ohtu-projekti"
version = "0.1.0"
description = ""
authors = ["Tarmo <tarmo.lindfors@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.2"
robotframework = "^3.2.2"
invoke = "^2.2.0"
pylint = "^3.0.2"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
