[tool.poetry]
name = "ohtu-projekti"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-cors = "^4.0.0"
psycopg2-binary = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
alembic = "^1.12.1"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pylint = "^3.0.2"
robotframework = "^6.1.1"
robotframework-seleniumlibrary = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
